tests/c_programs/int_wrapping/invalid_parse/below_min.c
int main(void) {
    int int_min = -2147483649; // too small
    return int_min;
}